Use UI language instead of locale for translations

* src/w32-gettext.c (my_nl_locale_name): Use GetThreadUILanguage instead
of GetThreadLocale.
--

This ensures that the user configured display language is used even if
the regional format (which is meant for dates and times) is set to
another locale.

GetThreadUILanguage is available since Windows Vista and Windows Server
2008.

GnuPG-bug-id: 7874